# mtlattn

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
docs/: EXPERIMENTS.md  PERFORMANCE.md
examples/: quickstart.py
experiments/: parallel-softmax-and-tiling.md
mtlattn/: __init__.py  bench.py
src/: attention.metal  attn_mpp.metal  ext.mm
tests/: test_correctness.py  test_mps_sdpa_bug.py
